--- a/notebooks/Refacer_colab.ipynb
+++ b/notebooks/Refacer_colab.ipynb
@@ -9,17 +9,17 @@
       "source": [
         "# Refacer\n",
         "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/xaviviro/refacer/blob/master/notebooks/Refacer_colab.ipynb)\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/zona-iptv/refacer/blob/master/notebooks/Refacer_colab.ipynb)\n",
         "\n",
-        "[Refacer](https://github.com/xaviviro/refacer) is an amazing tool that allows you to create deepfakes with multiple faces, giving you the option to choose which face to replace, all in one click!\n",
+        "[Refacer](https://github.com/zona-iptv/refacer) is an amazing tool that allows you to create deepfakes with multiple faces, giving you the option to choose which face to replace, all in one click!\n",
         "\n",
-        "If you find Refacer helpful, consider giving it a star on [GitHub](https://github.com/xaviviro/refacer) Your support helps to keep the project going!\n",
+        "If you find Refacer helpful, consider giving it a star on [GitHub](https://github.com/zona-iptv/refacer) Your support helps to keep the project going!\n",
         "\n",
-        "Before using this Colab or the Refacer tool, please make sure to read the [Disclaimer](https://github.com/xaviviro/refacer#disclaimer) in the GitHub repository. It's very important to understand the terms of use, and the ethical implications of creating deepfakes.\n",
+        "Before using this Colab or the Refacer tool, please make sure to read the [Disclaimer](https://github.com/zona-iptv/refacer#disclaimer) in the GitHub repository. It's very important to understand the terms of use, and the ethical implications of creating deepfakes.\n",
         "\n",
         "In this Colab, you'll be able to try out Refacer without needing to install anything on your own machine. Enjoy!\n",
         "\n",
-        "*If you encounter any issues or have any suggestions, feel free to [open an issue](https://github.com/xaviviro/refacer/issues/new) on the GitHub repository.*"
+        "*If you encounter any issues or have any suggestions, feel free to [open an issue](https://github.com/zona-iptv/refacer/issues/new) on the GitHub repository.*"
       ]
     },
     {
