--- a/notebooks/Refacer_colab.ipynb
+++ b/notebooks/Refacer_colab.ipynb
@@ -40,7 +40,7 @@
         "!git clone https://github.com/zona-iptv/refacer.git\n",
         "%cd refacer\n",
         "\n",
-        "!wget --content-disposition \"https://huggingface.co/deepinsight/inswapper/resolve/main/inswapper_128.onnx\"\n",
+        "!wget --content-disposition \"https://huggingface.co/ezioruan/inswapper_128.onnx/resolve/main/inswapper_128.onnx\"\n",
         "\n",
         "!python app.py --share_gradio --colab_performance\n"
       ]
